# zerotoprod

./: Cargo.toml  README.md  configuration.yaml
.cargo/: config.toml
.github/workflows/: general.yml
migrations/: 20250626092250_create_subscriptions_table.down.sql  20250626092250_create_subscriptions_table.up.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs
src/routes/: health_check.rs  mod.rs  subscriptions.rs
tests/: health_check.rs  subscriptions.rs
tests/common/: mod.rs
