[package]
name = "zerotoprod"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zerotoprod"

[dependencies]
axum-test = { version = "17.3.0", features = ["pretty-assertions", "reqwest"] }
config = "0.15.11"
reqwest = "0.12.20"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["trace"] }
chrono = { version = "0.4.41", default-features = false, features = ["clock"] }

[dependencies.axum]
version = "0.8.4"
features = ["macros"]

[dependencies.sqlx]
version = "0.8.6"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]

[dependencies.uuid]
version = "1.17.0"
features = ["v4"]
